--- a/src/index.html
+++ b/src/index.html
@@ -3,16 +3,36 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>MOV WEB</title>
+    <title>Movie-Web</title>
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-light bg-header">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-primary-color">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">MOVWEB</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item active dropdown">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0 text-white">
+              <li class="nav-item text-warning" id="itemHome">
+                <a class="nav-link" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item" id="itemNP">
+                <a class="nav-link" aria-current="page" href="#">Now Playing</a>
+              </li>
+              <li class="nav-item" id="itemUP">
+                <a class="nav-link" aria-current="page" href="#">Upcoming</a>
+              </li>
+              <li class="nav-item dropdown">
                 <a
                   class="nav-link dropdown-toggle"
                   href="#"
@@ -34,9 +54,9 @@
                 placeholder="Search..."
                 aria-label="Search"
               />
-              <button class="btn btn-primary" type="submit">
-                <i class="fa fa-search"></i>
-              </button>
+                <button class="btn bg-third-color text-white" type="submit">
+                  <i class="fa fa-search"></i>
+                </button>
             </form>
           </div>
         </div>
@@ -52,16 +72,8 @@
         <div class="page" id="nextBtn">Next Page</div>
       </div>
     </main>
-    <footer class="text-center bg-light text-muted">
-      <div
-        class="p-3"
-        style="background-color: rgba(0, 0, 0, 0.05)"
-      >
-        © 2021 Copyright:
-        <a class="text-reset fw-bold" href="https://mdbootstrap.com/"
-          >Submission Fundamental FrontEnd Web</a
-        >
-      </div>
+    <footer class="text-center fw-bold">
+      <footer-bar></footer-bar>
     </footer>
   </body>
 </html>
